[gd_scene load_steps=9 format=2]

[ext_resource path="res://Components/Units/Spriteframes/EnemyFrames.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Components/Cheats/Circle_Shadow.tscn" type="PackedScene" id=2]
[ext_resource path="res://Components/Units/Instanceable/Unit.gd" type="Script" id=3]
[ext_resource path="res://Components/Units/Resources/Unit_Base.tres" type="Resource" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 28.0368

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform float selected : hint_range(0.0, 1.0);
uniform vec4 highlight_color : hint_color;


render_mode blend_mix;

uniform float outLineSize : hint_range(0.001, 0.01)  = 0.001;
uniform vec4  outLineColor : hint_color = vec4(1.0, 1.0, 1.0, 1.0);

void fragment()
{
    vec4 tcol = texture(TEXTURE, UV);
    
    if (tcol.a < outLineSize * 100.)
    {
        if (texture(TEXTURE, UV + vec2(0.0,          outLineSize)).a  >  outLineSize * 100.0 ||
            texture(TEXTURE, UV + vec2(0.0,         -outLineSize)).a  >  outLineSize * 100.0 ||
            texture(TEXTURE, UV + vec2(outLineSize,  0.0)).a          >  outLineSize * 100.0 ||
            texture(TEXTURE, UV + vec2(-outLineSize, 0.0)).a          >  outLineSize * 100.0 ||
            texture(TEXTURE, UV + vec2(-outLineSize, outLineSize)).a          >  outLineSize * 100.0 ||
            texture(TEXTURE, UV + vec2(-outLineSize, -outLineSize)).a          >  outLineSize * 100.0 ||
            texture(TEXTURE, UV + vec2(outLineSize,  outLineSize)).a          >  outLineSize * 100.0 ||
            texture(TEXTURE, UV + vec2(outLineSize,  -outLineSize)).a          >  outLineSize * 100.0)
            tcol = outLineColor;
    }
    
    COLOR = tcol * (1.0 - selected) + selected * highlight_color * tcol.a;
}"

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = SubResource( 2 )
shader_param/selected = null
shader_param/highlight_color = Color( 1, 1, 1, 1 )
shader_param/outLineSize = 0.05
shader_param/outLineColor = Color( 0.72, 0.948667, 1, 1 )

[sub_resource type="CircleShape2D" id=4]
radius = 26.8127

[node name="Unit" type="KinematicBody2D" groups=[
"Entity",
]]
z_index = 4
collision_layer = 2
collision_mask = 0
script = ExtResource( 3 )
res = ExtResource( 4 )
friendly = false

[node name="Circle_Shadow" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
material = SubResource( 3 )
frames = ExtResource( 1 )
animation = "idle"

[node name="PunchHitBox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PunchHitBox"]
shape = SubResource( 4 )
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="frame_changed" from="Sprite" to="." method="_on_Sprite_frame_changed"]
[connection signal="body_entered" from="PunchHitBox" to="." method="_on_PunchHitBox_body_entered"]
[connection signal="body_exited" from="PunchHitBox" to="." method="_on_PunchHitBox_body_exited"]
